@@ -29,6 +29,7 @@ Unreleased Version 2.2.1-pre
  * Fix: Don't remember uncensor layers across restarts, to avoid being exposed to things you didn't want to just because you forgot to toggle it back off.
  * Fix: Properly show censored layers in the list even when they are revealed.
  * Server Fix: Allow reading users' trusted status through the API, because it's something you can write through it.
+ * Server Feature: Allow limiting the maximum number of users per session. Moderators and administrators can override this.
 
 2024-01-13 Version 2.2.0
  * Server Fix: Add --ssl-key-algorithm parameter to allow non-RSA SSL keys, defaulting to guessing the most common formats RSA and EC. Thanks Bluestrings for reporting.
